Add new settings

--- a/src/Year.Progress/App.config
+++ b/src/Year.Progress/App.config
@@ -32,6 +32,9 @@
       <setting name="WindowTop" serializeAs="String">
         <value>100</value>
       </setting>
+      <setting name="UpgradeRequired" serializeAs="String">
+        <value>True</value>
+      </setting>
     </Year.Progress.Properties.Settings>
   </userSettings>
 </configuration>
