--- a/src/Year.Progress/Properties/Settings.settings
+++ b/src/Year.Progress/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="WindowTop" Type="System.Double" Scope="User">
       <Value Profile="(Default)">100</Value>
     </Setting>
+    <Setting Name="UpgradeRequired" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
