--- a/src/Year.Progress/packages.config
+++ b/src/Year.Progress/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Costura.Fody" version="1.6.2" targetFramework="net461" developmentDependency="true" />
-  <package id="Fody" version="2.3.20" targetFramework="net461" developmentDependency="true" />
+  <package id="Fody" version="2.3.22" targetFramework="net461" developmentDependency="true" />
   <package id="Hardcodet.NotifyIcon.Wpf" version="1.0.8" targetFramework="net461" />
-  <package id="ReactiveProperty" version="4.0.1-pre1" targetFramework="net461" />
+  <package id="ReactiveProperty" version="4.1.1" targetFramework="net461" />
   <package id="System.Reactive" version="3.1.1" targetFramework="net461" />
   <package id="System.Reactive.Core" version="3.1.1" targetFramework="net461" />
   <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net461" />
